<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!-- titles -->
    <string name="app_name">Football Scores</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- api key can be obtained from http://api.football-data.org/register -->
    <string name="api_key" translatable="false"></string>

    <string name="action_settings">Settings</string>
    <string name="test_text">Test</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="share_button">Share Button</string>

    <!-- text descriptions -->
    <string name="about_text">
        This application gets the Football Matches Score for the Premier League,
        Seria A, Bundesliga, Primera Division and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission from the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed,
        and a modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>
    <string name="widget_text">This is a widget probably.</string>

    <!-- dummy data -->
    <string name="dummy_data" translatable="false">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>

    <!-- series names-->
    <string name="seria_a">Seria A</string>
    <string name="premier_league">Premier League</string>;
    <string name="uefa_champions_league">UEFA Champions League</string>
    <string name="primera_division">Primera Division</string>
    <string name="segunda_division">Segunda Division</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="ligue">Ligue</string>
    <string name="primera_liga">Primera Liga</string>
    <string name="eredivisie">Eredivisie</string>
    <string name="unknown_league">Unknown league please report</string>

    <!-- match day strings -->
    <string name="matchday">Match day:  <xliff:g id="day">%1$d</xliff:g></string>
    <!--champions league match day strings-->
    <string name="group_stages">Group Stages</string>
    <string name="first_knockout_round">First Knockout Round</string>
    <string name="quarter_final">Quarter Final</string>
    <string name="semi_final">Semi Final</string>
    <string name="final_text">Final</string>

    <!-- scores -->
    <string name="no_score" translatable="false"> &#8211; </string>
    <string name="score" translatable="false">
        <xliff:g example="5" id="home_score">%1$d</xliff:g>
         &#8211;
        <xliff:g example="1" id="away_score">%2$d</xliff:g>
    </string>

    <!-- share intent -->
    <string name="football_scores_sharetext">
        <xliff:g id="share_text">%1$s</xliff:g>#Football_Scores
    </string>

    <!-- widget strings -->
    <string name="title_information_widget">Today\'s Top Game</string>
    <string name="title_collection_widget">Today\'s Top Games</string>
    <string name="widget_update_time" translatable="false">86400000</string>

    <!--accessibility strings -->
    <string name="home_crest">
        <xliff:g example="Arsenal London FC" id="team_name">%1$s</xliff:g> Home Crest
    </string>

    <string name="away_crest">
        <xliff:g example="Arsenal London FC" id="team_name">%1$s</xliff:g> Away Crest
    </string>

    <!-- hint strings -->
    <string name="home_placeholder">FC St. Pauli</string>
    <string name="away_placeholder">Fortuna Dusseldorf</string>
    <string name="score_placeholder">4 &#8211; 0</string>
    <string name="time_placeholder">14:15</string>

    <!-- empty string for no matches -->
    <string name="empty_matches">No matches to display.</string>

    <!-- date picker string-->?
    <string name="date_picker">Select Date</string>

    <!-- fragment date format -->
    <string name="fragment_date_format" translatable="false">yyyy-MM-dd</string>
    <string name="day_of_week_format" translatable="false">EEEE</string>
    <string name="month_day_format" translatable="false">MMM d</string>
    <string name="day_title_format" translatable="false">
        <xliff:g example="Today">%1$s</xliff:g>, <xliff:g example="Nov 5">%2$s</xliff:g>
    </string>

</resources>
