<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:columnCount="3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
        <!-- row 1 -->
        <ImageView
            android:layout_width="0dp"
            android:contentDescription="@string/home_crest"
            android:gravity="center_horizontal"
            app:layout_gravity="fill_horizontal"
            tools:src="@drawable/arsenal"
            android:id="@+id/home_crest"
            app:layout_columnWeight="1"/>
        <TextView
            android:layout_width="0dp"
            android:text="@string/test_text"
            app:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:textSize="@dimen/Score"
            tools:text="@string/score_placeholder"
            android:id="@+id/score_textview"
            app:layout_columnWeight="1"/>
        <ImageView
            android:layout_width="0dp"
            android:contentDescription="@string/away_crest"
            app:layout_gravity="fill_horizontal"
            tools:src="@drawable/arsenal"
            android:id="@+id/away_crest"
            app:layout_columnWeight="1"/>
        <!-- row 2 -->
        <TextView
            android:layout_width="0dp"
            app:layout_gravity="fill_horizontal"
            android:textSize="@dimen/TeamNames"
            android:gravity="center"
            android:id="@+id/home_name"
            tools:text="@string/home_placeholder"
            app:layout_columnWeight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/test_text"
            app:layout_gravity="fill_horizontal"
            android:gravity="center"
            tools:text="@string/time_placeholder"
            android:id="@+id/data_textview"
            app:layout_columnWeight="1"/>
        <TextView
            android:layout_width="0dp"
            app:layout_gravity="fill_horizontal"
            android:gravity="center"
            tools:text="@string/away_placeholder"
            android:textSize="@dimen/TeamNames"
            android:id="@+id/away_name"
            app:layout_columnWeight="1"/>
    </android.support.v7.widget.GridLayout>