<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_about"
        android:title="@string/about"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_date_picker"
        app:showAsAction="ifRoom"
        android:title="@string/date_picker"
        android:icon="@drawable/ic_date_range_white_24dp"
        />
    <item
        android:id="@+id/menu_item_share"
        app:showAsAction="ifRoom"
        android:title="@string/share"
        android:icon="@android:drawable/ic_menu_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
</menu>
