<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scores_card_view"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:columnCount="3">
            <!-- row 1 -->
            <ImageView
                android:layout_width="0dp"
                android:contentDescription="@string/home_crest"
                android:gravity="center_horizontal"
                app:layout_gravity="fill_horizontal"
                tools:src="@drawable/arsenal"
                android:id="@+id/home_crest"
                app:layout_columnWeight="1"/>
            <TextView
                android:layout_width="0dp"
                android:text="@string/test_text"
                app:layout_gravity="fill_horizontal"
                android:gravity="center"
                android:textSize="@dimen/Score"
                tools:text="@string/score_placeholder"
                android:id="@+id/score_textview"
                app:layout_columnWeight="1"/>
            <ImageView
                android:layout_width="0dp"
                android:contentDescription="@string/away_crest"
                app:layout_gravity="fill_horizontal"
                tools:src="@drawable/arsenal"
                android:id="@+id/away_crest"
                app:layout_columnWeight="1"/>
            <!-- row 2 -->
            <TextView
                android:layout_width="0dp"
                app:layout_gravity="fill_horizontal"
                android:textSize="@dimen/TeamNames"
                android:gravity="center"
                android:id="@+id/home_name"
                tools:text="@string/home_placeholder"
                app:layout_columnWeight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/test_text"
                app:layout_gravity="fill_horizontal"
                android:gravity="center"
                tools:text="@string/time_placeholder"
                android:id="@+id/data_textview"
                app:layout_columnWeight="1"/>
            <TextView
                android:layout_width="0dp"
                app:layout_gravity="fill_horizontal"
                android:gravity="center"
                tools:text="@string/away_placeholder"
                android:textSize="@dimen/TeamNames"
                android:id="@+id/away_name"
                app:layout_columnWeight="1"/>
        </android.support.v7.widget.GridLayout>

    </android.support.v7.widget.CardView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_fragment_container">
    </FrameLayout>
</LinearLayout>


